gccida/c1/ix86_va_arg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3062:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3064:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3072:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3085:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v51; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3089:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3094:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v60; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3096:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3098:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v64; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3100:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v66; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3105:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v71; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3131:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v99; // [rsp+68h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3150:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( v8->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3155:1: error: use of undeclared identifier 'ix86_va_arg_intreg'
ix86_va_arg_intreg, 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3157:22: error: use of undeclared identifier 'machine_mode'
v14 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3165:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( type->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3227:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3228:22: error: use of undeclared identifier 'machine_mode'
v20 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3257:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/i386.c:3265:30: error: use of undeclared identifier 'machine_mode'
v31 = expand_expr( v30, x, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), EXPAND_NORMAL); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_va_arg/src/obj/i386.o] Error 1
